# cway

./: CMakeLists.txt  README.md  compile  compile_flags.txt
includes/: config.h.in
src/: main.c
